# app/routers/restaurante/router.ts
@@ -1,8 +1,9 @@
 import { Router, type RequestHandler } from "express";
 import { createPublicOrder, createTableOrder, finishTableCleaning, getConfig, listCatalog, listCatalogProducts, listDeliveryZones, listKdsTickets, listOptionGroups, listOrders, listProductionCategories, listProductionPoints, listTables, openTableSession, previewPublicCheckout, publicMenu, publicTracking, releaseTable, saveCatalogItem, saveConfig, saveDeliveryZone, saveOptionGroup, saveProductionPoint, saveTable, transitionKdsTicket, transitionOrder, waitTableBill } from "../../controllers/restaurante/restaurante";
 import { authenticateJWT } from "../../middlewares/auth";
-import { requireRestauranteAccess } from "../../middlewares/restauranteAccess";
+import { requireRestauranteAccess, requireRestauranteModule } from "../../middlewares/restauranteAccess";
 import { listPrintJobs, listPrintRules, listPrintStations, regeneratePrintStationToken, reprintProductionTicket, savePrintRule, savePrintStation, stationAckJob, stationClaimJobs, stationHeartbeat } from "../../controllers/restaurante/printing";
+import { currentRestaurantAccess, listRestaurantUserRoles, saveRestaurantUserRoles } from "../../controllers/restaurante/access";
 
 export const routerRestaurante = Router();
 const use = (handler: unknown) => handler as RequestHandler;
@@ -16,39 +17,42 @@ routerRestaurante.get("/estacao-impressao/trabalhos", use(stationClaimJobs));
 routerRestaurante.post("/estacao-impressao/trabalhos/ack", use(stationAckJob));
 
 routerRestaurante.use(authenticateJWT);
-routerRestaurante.get("/configuracao", requireRestauranteAccess(4), use(getConfig));
-routerRestaurante.put("/configuracao", requireRestauranteAccess(4), use(saveConfig));
-routerRestaurante.get("/cardapio", requireRestauranteAccess(1), use(listCatalog));
-routerRestaurante.get("/cardapio/produtos", requireRestauranteAccess(4), use(listCatalogProducts));
-routerRestaurante.post("/cardapio", requireRestauranteAccess(4), use(saveCatalogItem));
-routerRestaurante.patch("/cardapio/:id", requireRestauranteAccess(4), use(saveCatalogItem));
-routerRestaurante.get("/grupos-opcoes", requireRestauranteAccess(1), use(listOptionGroups));
-routerRestaurante.post("/grupos-opcoes", requireRestauranteAccess(4), use(saveOptionGroup));
-routerRestaurante.patch("/grupos-opcoes/:id", requireRestauranteAccess(4), use(saveOptionGroup));
-routerRestaurante.get("/zonas-entrega", requireRestauranteAccess(1), use(listDeliveryZones));
-routerRestaurante.post("/zonas-entrega", requireRestauranteAccess(4), use(saveDeliveryZone));
-routerRestaurante.patch("/zonas-entrega/:id", requireRestauranteAccess(4), use(saveDeliveryZone));
-routerRestaurante.get("/mesas", requireRestauranteAccess(1), use(listTables));
-routerRestaurante.post("/mesas", requireRestauranteAccess(4), use(saveTable));
-routerRestaurante.patch("/mesas/:id", requireRestauranteAccess(4), use(saveTable));
-routerRestaurante.post("/mesas/:id/abrir", requireRestauranteAccess(2), use(openTableSession));
-routerRestaurante.post("/mesas/:id/aguardar-conta", requireRestauranteAccess(2), use(waitTableBill));
-routerRestaurante.post("/mesas/:id/liberar", requireRestauranteAccess(2), use(releaseTable));
-routerRestaurante.post("/mesas/:id/finalizar-limpeza", requireRestauranteAccess(2), use(finishTableCleaning));
-routerRestaurante.post("/sessoes-mesa/:id/pedidos", requireRestauranteAccess(2), use(createTableOrder));
-routerRestaurante.get("/pontos-producao/categorias", requireRestauranteAccess(1), use(listProductionCategories));
-routerRestaurante.get("/pontos-producao", requireRestauranteAccess(1), use(listProductionPoints));
-routerRestaurante.post("/pontos-producao", requireRestauranteAccess(4), use(saveProductionPoint));
-routerRestaurante.patch("/pontos-producao/:id", requireRestauranteAccess(4), use(saveProductionPoint));
-routerRestaurante.get("/kds", requireRestauranteAccess(1), use(listKdsTickets));
-routerRestaurante.post("/kds/:id/transicao", requireRestauranteAccess(2), use(transitionKdsTicket));
-routerRestaurante.get("/estacoes-impressao", requireRestauranteAccess(1), use(listPrintStations));
-routerRestaurante.post("/estacoes-impressao", requireRestauranteAccess(4), use(savePrintStation));
-routerRestaurante.patch("/estacoes-impressao/:id", requireRestauranteAccess(4), use(savePrintStation));
-routerRestaurante.post("/estacoes-impressao/:id/regenerar-token", requireRestauranteAccess(4), use(regeneratePrintStationToken));
-routerRestaurante.get("/regras-impressao", requireRestauranteAccess(1), use(listPrintRules));
-routerRestaurante.put("/regras-impressao", requireRestauranteAccess(4), use(savePrintRule));
-routerRestaurante.get("/trabalhos-impressao", requireRestauranteAccess(1), use(listPrintJobs));
-routerRestaurante.post("/kds/:id/reimprimir", requireRestauranteAccess(2), use(reprintProductionTicket));
-routerRestaurante.get("/pedidos", requireRestauranteAccess(1), use(listOrders));
-routerRestaurante.post("/pedidos/:id/transicao", requireRestauranteAccess(2), use(transitionOrder));
+routerRestaurante.get("/acesso", requireRestauranteModule(), use(currentRestaurantAccess));
+routerRestaurante.get("/usuarios-papeis", requireRestauranteAccess("PAPEIS_GERENCIAR"), use(listRestaurantUserRoles));
+routerRestaurante.put("/usuarios-papeis/:usuarioId", requireRestauranteAccess("PAPEIS_GERENCIAR"), use(saveRestaurantUserRoles));
+routerRestaurante.get("/configuracao", requireRestauranteAccess("CONFIGURACOES_GERENCIAR"), use(getConfig));
+routerRestaurante.put("/configuracao", requireRestauranteAccess("CONFIGURACOES_GERENCIAR"), use(saveConfig));
+routerRestaurante.get("/cardapio", requireRestauranteAccess("CARDAPIO_VISUALIZAR"), use(listCatalog));
+routerRestaurante.get("/cardapio/produtos", requireRestauranteAccess("CARDAPIO_CONFIGURAR"), use(listCatalogProducts));
+routerRestaurante.post("/cardapio", requireRestauranteAccess("CARDAPIO_CONFIGURAR"), use(saveCatalogItem));
+routerRestaurante.patch("/cardapio/:id", requireRestauranteAccess("CARDAPIO_CONFIGURAR"), use(saveCatalogItem));
+routerRestaurante.get("/grupos-opcoes", requireRestauranteAccess("CARDAPIO_VISUALIZAR"), use(listOptionGroups));
+routerRestaurante.post("/grupos-opcoes", requireRestauranteAccess("CARDAPIO_CONFIGURAR"), use(saveOptionGroup));
+routerRestaurante.patch("/grupos-opcoes/:id", requireRestauranteAccess("CARDAPIO_CONFIGURAR"), use(saveOptionGroup));
+routerRestaurante.get("/zonas-entrega", requireRestauranteAccess("CONFIGURACOES_GERENCIAR"), use(listDeliveryZones));
+routerRestaurante.post("/zonas-entrega", requireRestauranteAccess("CONFIGURACOES_GERENCIAR"), use(saveDeliveryZone));
+routerRestaurante.patch("/zonas-entrega/:id", requireRestauranteAccess("CONFIGURACOES_GERENCIAR"), use(saveDeliveryZone));
+routerRestaurante.get("/mesas", requireRestauranteAccess("SALAO_VISUALIZAR"), use(listTables));
+routerRestaurante.post("/mesas", requireRestauranteAccess("SALAO_CONFIGURAR"), use(saveTable));
+routerRestaurante.patch("/mesas/:id", requireRestauranteAccess("SALAO_CONFIGURAR"), use(saveTable));
+routerRestaurante.post("/mesas/:id/abrir", requireRestauranteAccess("SALAO_OPERAR"), use(openTableSession));
+routerRestaurante.post("/mesas/:id/aguardar-conta", requireRestauranteAccess("SALAO_OPERAR"), use(waitTableBill));
+routerRestaurante.post("/mesas/:id/liberar", requireRestauranteAccess("SALAO_OPERAR"), use(releaseTable));
+routerRestaurante.post("/mesas/:id/finalizar-limpeza", requireRestauranteAccess("SALAO_OPERAR"), use(finishTableCleaning));
+routerRestaurante.post("/sessoes-mesa/:id/pedidos", requireRestauranteAccess("SALAO_OPERAR"), use(createTableOrder));
+routerRestaurante.get("/pontos-producao/categorias", requireRestauranteAccess("KDS_VISUALIZAR"), use(listProductionCategories));
+routerRestaurante.get("/pontos-producao", requireRestauranteAccess("KDS_VISUALIZAR"), use(listProductionPoints));
+routerRestaurante.post("/pontos-producao", requireRestauranteAccess("KDS_CONFIGURAR"), use(saveProductionPoint));
+routerRestaurante.patch("/pontos-producao/:id", requireRestauranteAccess("KDS_CONFIGURAR"), use(saveProductionPoint));
+routerRestaurante.get("/kds", requireRestauranteAccess("KDS_VISUALIZAR"), use(listKdsTickets));
+routerRestaurante.post("/kds/:id/transicao", requireRestauranteAccess("KDS_OPERAR"), use(transitionKdsTicket));
+routerRestaurante.get("/estacoes-impressao", requireRestauranteAccess("IMPRESSAO_VISUALIZAR"), use(listPrintStations));
+routerRestaurante.post("/estacoes-impressao", requireRestauranteAccess("IMPRESSAO_CONFIGURAR"), use(savePrintStation));
+routerRestaurante.patch("/estacoes-impressao/:id", requireRestauranteAccess("IMPRESSAO_CONFIGURAR"), use(savePrintStation));
+routerRestaurante.post("/estacoes-impressao/:id/regenerar-token", requireRestauranteAccess("IMPRESSAO_CONFIGURAR"), use(regeneratePrintStationToken));
+routerRestaurante.get("/regras-impressao", requireRestauranteAccess("IMPRESSAO_VISUALIZAR"), use(listPrintRules));
+routerRestaurante.put("/regras-impressao", requireRestauranteAccess("IMPRESSAO_CONFIGURAR"), use(savePrintRule));
+routerRestaurante.get("/trabalhos-impressao", requireRestauranteAccess("IMPRESSAO_VISUALIZAR"), use(listPrintJobs));
+routerRestaurante.post("/kds/:id/reimprimir", requireRestauranteAccess("KDS_OPERAR"), use(reprintProductionTicket));
+routerRestaurante.get("/pedidos", requireRestauranteAccess("PEDIDOS_VISUALIZAR"), use(listOrders));
+routerRestaurante.post("/pedidos/:id/transicao", requireRestauranteAccess("PEDIDOS_OPERAR"), use(transitionOrder));
